# CG-Projeto

./: CMakeLists.txt  engine.cpp  generator.cpp
Fase1/: engine.cpp  generator.cpp
Fase2/: CMakeLists.txt  engine.cpp  generator.cpp
Fase2/Relatorio/: main.tex
Fase2/test files/: sistema_solar.xml
Fase2/test files/test_files_phase_1/: test_1_5.xml
Fase3/: CMakeLists.txt  catmull.cpp  catmull.hpp  engine.cpp  generator.cpp
Fase3/patches/: comet.patch
Fase3/relatório/: main.tex
Fase3/test files/: sistema_solar.xml
